setting up swagger docs
